--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtEmail"
+        android:id="@+id/edtRaca"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_marginTop="248dp"
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtCpf"
+        android:id="@+id/edtPeso"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_marginTop="300dp"
