Correção de alguns ids que estavam repetidos

--- a/app/src/main/res/layout/activity_cadastro_veterinario.xml
+++ b/app/src/main/res/layout/activity_cadastro_veterinario.xml
@@ -24,11 +24,10 @@
         android:id="@+id/imageView6"
         android:layout_width="72dp"
         android:layout_height="63dp"
-        android:layout_marginStart="351dp"
+        android:layout_marginStart="339dp"
         android:layout_marginTop="728dp"
         android:rotation="-30"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/patinhas"
@@ -43,7 +42,6 @@
         android:layout_marginEnd="36dp"
         android:rotation="-30"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/patinhas"
@@ -55,10 +53,9 @@
         android:layout_height="63dp"
         android:layout_marginStart="278dp"
         android:layout_marginTop="728dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="54dp"
         android:rotation="-30"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/patinhas"
@@ -70,10 +67,9 @@
         android:layout_height="63dp"
         android:layout_marginStart="323dp"
         android:layout_marginTop="788dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="10dp"
         android:rotation="-30"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/patinhas"
@@ -92,135 +88,154 @@
 
     <ImageView
         android:id="@+id/ImgLogo"
-        android:layout_width="110dp"
-        android:layout_height="101dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="108dp"
+        android:layout_height="106dp"
+        android:layout_marginStart="151dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="152dp"
         android:src="@drawable/docvet"
-        app:layout_constraintEnd_toEndOf="@+id/txtLogin"
-        app:layout_constraintStart_toStartOf="@+id/txtLogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnCadastrar"
+        android:id="@+id/btnCadastrarVeterinario"
         android:layout_width="240dp"
         android:layout_height="40dp"
-        android:layout_marginTop="623dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="626dp"
+        android:layout_marginEnd="86dp"
         android:backgroundTint="#4BEDC6"
         android:text="Cadastrar"
         android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtRaca"
+        android:id="@+id/edtEmailVeterinario"
         android:layout_width="250dp"
         android:layout_height="40dp"
+        android:layout_marginStart="81dp"
         android:layout_marginTop="201dp"
+        android:layout_marginEnd="80dp"
         android:background="@drawable/borda_redonda"
         android:backgroundTint="@color/white"
         android:breakStrategy="high_quality"
         android:ems="10"
         android:hint="Email"
         android:inputType="textWebEmailAddress"
-        app:layout_constraintEnd_toEndOf="@+id/edtPeso"
-        app:layout_constraintStart_toStartOf="@+id/edtPeso"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtIdadePet"
+        android:id="@+id/edtTelefoneVeterinario"
         android:layout_width="250dp"
         android:layout_height="40dp"
+        android:layout_marginStart="81dp"
         android:layout_marginTop="359dp"
+        android:layout_marginEnd="80dp"
         android:background="@drawable/borda_redonda"
         android:ems="10"
         android:hint="Telefone"
         android:inputType="phone"
-        app:layout_constraintEnd_toEndOf="@+id/btnCadastrar"
-        app:layout_constraintStart_toStartOf="@+id/btnCadastrar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtPeso"
+        android:id="@+id/edtCpfVeterinario"
         android:layout_width="250dp"
         android:layout_height="40dp"
+        android:layout_marginStart="81dp"
         android:layout_marginTop="253dp"
+        android:layout_marginEnd="80dp"
         android:background="@drawable/borda_redonda"
         android:ems="10"
         android:hint="CPF"
         android:inputType="number"
-        app:layout_constraintEnd_toEndOf="@+id/edtTamanho"
-        app:layout_constraintStart_toStartOf="@+id/edtTamanho"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtTamanho"
+        android:id="@+id/edtCRM"
         android:layout_width="250dp"
         android:layout_height="40dp"
+        android:layout_marginStart="81dp"
         android:layout_marginTop="306dp"
+        android:layout_marginEnd="80dp"
         android:background="@drawable/borda_redonda"
         android:ems="10"
         android:hint="CRM"
         android:inputType="number"
-        app:layout_constraintEnd_toEndOf="@+id/edtIdadePet"
-        app:layout_constraintStart_toStartOf="@+id/edtIdadePet"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtNomePet"
+        android:id="@+id/edtNomeVeterinario"
         android:layout_width="250dp"
         android:layout_height="40dp"
+        android:layout_marginStart="81dp"
         android:layout_marginTop="149dp"
+        android:layout_marginEnd="80dp"
         android:background="@drawable/borda_redonda"
         android:backgroundTint="@color/white"
         android:breakStrategy="high_quality"
         android:ems="10"
         android:hint="Nome"
         android:inputType="textWebEmailAddress"
-        app:layout_constraintEnd_toEndOf="@+id/edtRaca"
-        app:layout_constraintStart_toStartOf="@+id/edtRaca"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtLogin"
+        android:id="@+id/txtLoginVeterinario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="117dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="114dp"
+        android:layout_marginEnd="68dp"
         android:fontFamily="sans-serif"
         android:text="Cadastre-se Como Veterinario"
         android:textColor="#F4F0F0"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/edtNomePet"
-        app:layout_constraintStart_toStartOf="@+id/edtNomePet"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtSenha"
+        android:id="@+id/edtSenhaVeterinario"
         android:layout_width="250dp"
         android:layout_height="40dp"
+        android:layout_marginStart="81dp"
         android:layout_marginTop="516dp"
+        android:layout_marginEnd="80dp"
         android:background="@drawable/borda_redonda"
         android:ems="10"
         android:hint="Senha"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/edtFotoPet"
-        app:layout_constraintStart_toStartOf="@+id/edtFotoPet"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtFotoPet"
+        android:id="@+id/edtConfSenhaVeterinario"
         android:layout_width="250dp"
         android:layout_height="40dp"
+        android:layout_marginStart="81dp"
         android:layout_marginTop="566dp"
+        android:layout_marginEnd="80dp"
         android:background="@drawable/borda_redonda"
         android:ems="10"
         android:hint="Confirmar Senha"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/btnCadastrar"
-        app:layout_constraintStart_toStartOf="@+id/btnCadastrar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -242,17 +257,19 @@
         android:layout_width="121dp"
         android:layout_height="18dp"
         android:layout_marginStart="210dp"
-        android:layout_marginTop="409dp"
+        android:layout_marginTop="410dp"
         android:layout_marginEnd="80dp"
+        android:layout_marginBottom="304dp"
         android:text="Especialidade"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
-        android:id="@+id/checkPequeno"
+        android:id="@+id/checkPequenoVeterinario"
         android:layout_width="101dp"
         android:layout_height="27dp"
         android:layout_marginStart="80dp"
@@ -266,7 +283,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
-        android:id="@+id/checkMedio"
+        android:id="@+id/checkMedioVeterinario"
         android:layout_width="101dp"
         android:layout_height="27dp"
         android:layout_marginStart="80dp"
@@ -280,7 +297,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
-        android:id="@+id/checkGrande"
+        android:id="@+id/checkGrandeVeterinario"
         android:layout_width="101dp"
         android:layout_height="27dp"
         android:layout_marginStart="80dp"
