--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -24,127 +24,138 @@
         android:id="@+id/ImgLogo"
         android:layout_width="110dp"
         android:layout_height="101dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="54dp"
+        android:layout_marginEnd="149dp"
         android:src="@drawable/docvet"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/txtLogin"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/txtLogin"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.085" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="151dp"
+        android:layout_marginTop="175dp"
+        android:layout_marginEnd="149dp"
         android:fontFamily="sans-serif"
         android:text="Cadastre-se"
         android:textColor="#F4F0F0"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/edtRaca"
-        app:layout_constraintStart_toStartOf="@+id/edtRaca"
-        app:layout_constraintTop_toBottomOf="@+id/ImgLogo" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnCadastrar"
+        android:id="@+id/btnCadastrarDonoDePet"
         android:layout_width="240dp"
         android:layout_height="40dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginStart="86dp"
+        android:layout_marginTop="506dp"
+        android:layout_marginEnd="85dp"
         android:backgroundTint="#4BEDC6"
         android:text="Cadastrar"
         android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtPeso" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtRaca"
+        android:id="@+id/edtEmailDonoPet"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginTop="254dp"
+        android:layout_marginEnd="80dp"
         android:background="@drawable/borda_redonda"
         android:backgroundTint="@color/white"
         android:breakStrategy="high_quality"
         android:ems="10"
         android:hint="Email"
         android:inputType="textWebEmailAddress"
-        app:layout_constraintEnd_toEndOf="@+id/edtPeso"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/edtPeso"
-        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtNomePet"
+        android:id="@+id/edtNomeDonoPet"
         android:layout_width="250dp"
         android:layout_height="40dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginTop="202dp"
+        android:layout_marginEnd="80dp"
         android:background="@drawable/borda_redonda"
         android:backgroundTint="@color/white"
         android:breakStrategy="high_quality"
         android:ems="10"
         android:hint="Nome"
         android:inputType="textWebEmailAddress"
-        app:layout_constraintEnd_toEndOf="@+id/edtPeso"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/edtPeso"
-        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtPeso"
+        android:id="@+id/edtCpfDonoPet"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginTop="306dp"
+        android:layout_marginEnd="80dp"
         android:background="@drawable/borda_redonda"
         android:ems="10"
         android:hint="CPF"
         android:inputType="number"
-        app:layout_constraintEnd_toEndOf="@+id/btnCadastrar"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/btnCadastrar"
-        app:layout_constraintTop_toBottomOf="@+id/edtRaca" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtIdadePet"
+        android:id="@+id/edtTelefoneDonoPet"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginTop="358dp"
+        android:layout_marginEnd="80dp"
         android:background="@drawable/borda_redonda"
         android:ems="10"
         android:hint="Telefone"
         android:inputType="phone"
-        app:layout_constraintEnd_toEndOf="@+id/btnCadastrar"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/btnCadastrar"
-        app:layout_constraintTop_toBottomOf="@+id/edtRaca" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtSenha"
+        android:id="@+id/edtSenhaDonoPet"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginTop="410dp"
+        android:layout_marginEnd="80dp"
         android:background="@drawable/borda_redonda"
         android:ems="10"
         android:hint="Senha"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/btnCadastrar"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/btnCadastrar"
-        app:layout_constraintTop_toBottomOf="@+id/edtRaca" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtFotoPet"
+        android:id="@+id/edtConfSenhaDonoPet"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_marginTop="164dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginTop="458dp"
+        android:layout_marginEnd="80dp"
         android:background="@drawable/borda_redonda"
         android:ems="10"
         android:hint="Confirmar Senha"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/btnCadastrar"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/btnCadastrar"
-        app:layout_constraintTop_toBottomOf="@+id/edtRaca" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -164,7 +175,7 @@
         android:id="@+id/imageView3"
         android:layout_width="72dp"
         android:layout_height="63dp"
-        android:layout_marginStart="351dp"
+        android:layout_marginStart="345dp"
         android:layout_marginTop="637dp"
         android:rotation="-30"
         app:layout_constraintEnd_toEndOf="parent"
@@ -179,9 +190,7 @@
         android:layout_height="63dp"
         android:layout_marginStart="323dp"
         android:layout_marginTop="700dp"
-        android:layout_marginEnd="16dp"
         android:rotation="-30"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/patinhas"
