--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtRaca"
+        android:id="@+id/edtEmailDonoPet"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_marginTop="248dp"
@@ -62,7 +62,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnCadastrar"
+        android:id="@+id/btnEntrar"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_marginTop="384dp"
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtPeso"
+        android:id="@+id/edtCpfDonoPet"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_marginTop="300dp"
