--- a/app/src/main/res/layout/activity_recuperar_senha.xml
+++ b/app/src/main/res/layout/activity_recuperar_senha.xml
@@ -37,21 +37,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="128dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="221dp"
         android:layout_marginEnd="127dp"
-        android:layout_marginBottom="483dp"
         android:fontFamily="sans-serif"
         android:text="Recuperar Senha"
         android:textColor="#F4F0F0"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ImgLogo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnCadastrar"
+        android:id="@+id/btnSalvarNovaSenha"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_marginTop="72dp"
@@ -61,49 +59,52 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtFotoPet" />
+        app:layout_constraintTop_toBottomOf="@+id/edtConfSenhaDonoPet" />
 
     <EditText
-        android:id="@+id/edtSenha"
+        android:id="@+id/edtEmailDonoPet"
         android:layout_width="240dp"
         android:layout_height="40dp"
-        android:layout_marginTop="76dp"
-        android:background="@drawable/borda_redonda"
-        android:ems="10"
-        android:hint="Senha"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/btnCadastrar"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/btnCadastrar"
-        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />
-
-    <EditText
-        android:id="@+id/edtEmailrs"
-        android:layout_width="240dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="262dp"
+        android:layout_marginEnd="86dp"
         android:background="@drawable/borda_redonda"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="@+id/btnCadastrar"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/btnCadastrar"
-        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtFotoPet"
+        android:id="@+id/edtSenhaDonoPet"
         android:layout_width="240dp"
         android:layout_height="40dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="326dp"
+        android:layout_marginEnd="86dp"
+        android:background="@drawable/borda_redonda"
+        android:ems="10"
+        android:hint="Senha"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/edtConfSenhaDonoPet"
+        android:layout_width="240dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="85dp"
+        android:layout_marginTop="394dp"
+        android:layout_marginEnd="86dp"
         android:background="@drawable/borda_redonda"
         android:ems="10"
         android:hint="Confirmar Senha"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/btnCadastrar"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/btnCadastrar"
-        app:layout_constraintTop_toBottomOf="@+id/edtSenha" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <ImageView
