--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edtCpfDonoPet"
+        android:id="@+id/edtSenhaDonoPet"
         android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_marginTop="300dp"
