--- a/app/src/main/res/layout/activity_cadastro_veterinario.xml
+++ b/app/src/main/res/layout/activity_cadastro_veterinario.xml
@@ -76,7 +76,7 @@
         tools:ignore="MissingConstraints" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/especialidadesVet"
         android:layout_width="118dp"
         android:layout_height="27dp"
         android:layout_marginStart="212dp"
