--- a/app/src/main/res/layout/activity_veterinarios.xml
+++ b/app/src/main/res/layout/activity_veterinarios.xml
@@ -47,6 +47,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="214dp"
         android:layout_marginEnd="1dp"
+        android:paddingHorizontal="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
