--- a/app/src/main/res/layout/activity_lista_vet_custom.xml
+++ b/app/src/main/res/layout/activity_lista_vet_custom.xml
@@ -4,27 +4,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".listaVetCustom" >
+    android:paddingVertical="10sp"
+    tools:context=".listaVetCustom">
 
     <ImageView
         android:id="@+id/imagem_lista"
         android:layout_width="90dp"
         android:layout_height="80dp"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
 
-    <TextView
-        android:id="@+id/titulo_lista"
-        android:layout_width="270dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="80dp"
-        android:layout_weight="1"
-        android:text="TextView"
-        android:textAlignment="textStart"
-        android:textSize="16sp" />
+        android:orientation="vertical"
+        android:paddingHorizontal="5sp"
+        android:paddingStart="10sp">
 
-    <ImageView
+        <TextView
+            android:id="@+id/titulo_lista"
+            android:layout_width="220dp"
+            android:layout_height="1dp"
+            android:layout_weight="1"
+            android:text="TextView"
+            android:textAlignment="textStart"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/descricao_lista"
+            android:layout_width="220dp"
+            android:layout_height="35dp"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:text="TextView"
+            android:textAlignment="textStart"
+            android:textSize="12sp" />
+
+
+    </LinearLayout>
+
+    <Button
         android:id="@+id/seta_direita_lista"
-        android:layout_width="32dp"
+        android:layout_width="40dp"
         android:layout_height="80dp"
-        android:layout_weight="1"
-        app:srcCompat="@android:drawable/ic_menu_send" />
+        android:background="@android:color/transparent"
+        android:backgroundTint="#FFFFFF"
+        android:paddingStart="5sp"
+        app:icon="@android:drawable/ic_media_play"
+        app:iconGravity="textStart"
+        app:iconSize="50dp"
+        app:iconTint="#19A8A7" />
+
+
 </LinearLayout>
